# AI-CFO-Dashboard-Multi-Agents

./: .gitignore  CLAUDE.md  README.md  config.py  message_bus.py  pyproject.toml
.claude/rules/: agents.md  tests.md
agents/: base_agent.py  data_ingestion.py
prompts/: data_ingestion.md
sample_data/: cash_flow.xlsx  profit_loss.csv  transactions.csv
tests/: conftest.py  test_data_ingestion.py
